--- a/TenIdeas/AndroidManifest.xml
+++ b/TenIdeas/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="ca.charland.tenideas.TenIdeas" android:versionCode="1" android:versionName="0.0.1-SNAPSHOT">
+  package="ca.charland.tenideas" android:versionCode="1" android:versionName="0.0.1-SNAPSHOT">
 
   <application android:icon="@drawable/icon" android:label="@string/app_name">
-    <activity android:name=".HelloAndroidActivity">
+    <activity android:name="ca.charland.tenideas.TenIdeas">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
