--- a/TenIdeas/.project
+++ b/TenIdeas/.project
@@ -36,4 +36,17 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>androidbase/java</name>
+			<type>2</type>
+			<locationURI>ANDROID_BASE_HOME/AndroidBase/src/main/java</locationURI>
+		</link>
+	</linkedResources>
+	<variableList>
+		<variable>
+			<name>ANDROID_BASE_HOME</name>
+			<value>file:/D:/Users/mcharland/git/AndroidBase</value>
+		</variable>
+	</variableList>
 </projectDescription>
