--- a/TenIdeas/AndroidManifest.xml
+++ b/TenIdeas/AndroidManifest.xml
@@ -1,28 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-<<<<<<< HEAD
     package="ca.charland"
     android:versionCode="1"
     android:versionName="0.0.1-SNAPSHOT" >
 
+    <uses-sdk
+        android:maxSdkVersion="17"
+        android:minSdkVersion="8"
+        android:targetSdkVersion="17" />
+
     <application
+        android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <activity android:name="ca.charland.tenideas.manage.TenIdeasFirstActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-=======
-  package="ca.charland.tenideas" android:versionCode="1" android:versionName="0.0.1-SNAPSHOT">
-
-  <application android:icon="@drawable/icon" android:label="@string/app_name">
-    <activity android:name="ca.charland.tenideas.TenIdeas">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-  </application>
->>>>>>> b587450cb0ce1b7e9e7cb4994b104d264d3cfa59
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
