--- a/TenIdeas/.project
+++ b/TenIdeas/.project
@@ -38,15 +38,15 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>androidbase/java</name>
+			<name>androidbase/src</name>
 			<type>2</type>
-			<locationURI>ANDROID_BASE_HOME/AndroidBase/src/main/java</locationURI>
+			<location>/home/tron/git/AndroidBase/AndroidBase/src/main/java</location>
 		</link>
 	</linkedResources>
 	<variableList>
 		<variable>
 			<name>ANDROID_BASE_HOME</name>
-			<value>file:/E:/git/AndroidBase</value>
+			<value>/home/tron/git/AndroidBase</value>
 		</variable>
 	</variableList>
 </projectDescription>
