--- a/TenIdeas/AndroidManifest.xml
+++ b/TenIdeas/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
-        <activity android:name="ca.charland.tenideas.manage.TenIdeasFirstActivity" >
+        <activity android:name="ca.charland.tenideas.manage.FirstActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
