--- a/TenIdeasTest/.project
+++ b/TenIdeasTest/.project
@@ -24,7 +24,7 @@
 		<link>
 			<name>androidbasetest/src</name>
 			<type>2</type>
-			<location>E:/git/AndroidBase/AndroidBaseTest/src/main/java</location>
+			<location>/home/tron/Desktop/E::/git/AndroidBase/AndroidBaseTest/src/main/java</location>
 		</link>
 	</linkedResources>
 </projectDescription>
