--- a/TenIdeas/pom.xml
+++ b/TenIdeas/pom.xml
@@ -25,6 +25,11 @@
 			<artifactId>roboguice</artifactId>
 			<version>2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>ca.charland</groupId>
+			<artifactId>AndroidBase</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
