ten ideas getting closer

--- a/TenIdeas/AndroidManifest.xml
+++ b/TenIdeas/AndroidManifest.xml
@@ -20,16 +20,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-         <activity android:name=".activity.manage.PreferencesActivity" />
+        <activity android:name=".activity.manage.PreferencesActivity" />
+        <activity android:name=".activity.manage.BaseAddANewPersonActivity" />
         <activity android:name=".tenideas.manage.PersonHomeActivity" />
         <activity android:name=".tenideas.manage.AddANewPersonActivity" />
-        <activity android:name=".tenideas.manage.DateValuesEnteredActivity"/>"
+        <activity android:name=".tenideas.manage.DateValuesEnteredActivity" />
         <activity android:name=".tenideas.manage.DateListOfPreviousEntriesActivity" />
         <activity android:name=".tenideas.manage.AllPeopleListActivity" />
         <activity android:name=".tenideas.manage.SingleDateValuesEnteredActivity" />
         <activity android:name=".tenideas.DateAndTimeActivity" />
         <activity android:name=".tenideas.IdeasActivity" />
-       
     </application>
 
 </manifest>
