--- a/TenIdeas/AndroidManifest.xml
+++ b/TenIdeas/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ca.charland"
+    package="ca.charland.tenideas"
     android:versionCode="1"
     android:versionName="0.0.1-SNAPSHOT" >
 
@@ -13,23 +13,23 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
-        <activity android:name=".tenideas.manage.FirstActivity" >
+        <activity android:name="ca.charland.tenideas.manage.FirstActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.manage.PreferencesActivity" />
-        <activity android:name=".activity.manage.BaseAddANewPersonActivity" />
-        <activity android:name=".tenideas.manage.PersonHomeActivity" />
-        <activity android:name=".tenideas.manage.AddANewPersonActivity" />
-        <activity android:name=".tenideas.manage.DateValuesEnteredActivity" />
-        <activity android:name=".tenideas.manage.DateListOfPreviousEntriesActivity" />
-        <activity android:name=".tenideas.manage.AllPeopleListActivity" />
-        <activity android:name=".tenideas.manage.SingleDateValuesEnteredActivity" />
-        <activity android:name=".tenideas.DateAndTimeActivity" />
-        <activity android:name=".tenideas.IdeasActivity" />
+        <activity android:name="ca.charland.activity.manage.PreferencesActivity" />
+        <activity android:name="ca.charland.activity.manage.BaseAddANewPersonActivity" />
+        <activity android:name="ca.charland.tenideas.manage.PersonHomeActivity" />
+        <activity android:name="ca.charland.tenideas.manage.AddANewPersonActivity" />
+        <activity android:name="ca.charland.tenideas.manage.DateValuesEnteredActivity" />
+        <activity android:name="ca.charland.tenideas.manage.DateListOfPreviousEntriesActivity" />
+        <activity android:name="ca.charland.tenideas.manage.AllPeopleListActivity" />
+        <activity android:name="ca.charland.tenideas.manage.SingleDateValuesEnteredActivity" />
+        <activity android:name="ca.charland.tenideas.DateAndTimeActivity" />
+        <activity android:name="ca.charland.tenideas.IdeasActivity" />
     </application>
 
 </manifest>
