now with black box tests

--- a/TenIdeasBlackBoxTest/pom.xml
+++ b/TenIdeasBlackBoxTest/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ca.charland.tenideas</groupId>
-	<artifactId>TenIdeas</artifactId>
+	<artifactId>TenIdeasBlackBoxTests</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>apk</packaging>
-	<name>TenIdeas</name>
+	<name>TenIdeasBlackBoxTests</name>
 
 	<dependencies>
 		<dependency>
@@ -16,9 +16,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.roboguice</groupId>
-			<artifactId>roboguice</artifactId>
-			<version>2.0</version>
+			<groupId>com.jayway.android.robotium</groupId>
+			<artifactId>robotium-solo</artifactId>
+			<version>3.6</version>
 		</dependency>
 	</dependencies>
 
@@ -56,4 +56,3 @@
 		</plugins>
 	</build>
 </project>
-
