--- a/TenIdeasTest/pom.xml
+++ b/TenIdeasTest/pom.xml
@@ -39,7 +39,8 @@
 		<dependency>
 			<groupId>com.google.android</groupId>
 			<artifactId>android</artifactId>
-			<version>2.2.1</version>
+			<version>2.3.3</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.roboguice</groupId>
